# Computer-Graphics-Homework-Skeleton

./: .gitignore  BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  Camera.cpp  Camera.h  FullScreenTexturedQuad.cpp  FullScreenTexturedQuad.h  Hit.h  Intersectable.h  LagrangeCurve.cpp  LagrangeCurve.h  LineStrip.cpp  LineStrip.h  Material.cpp  Material.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Ray.h  RoughMaterial.cpp  RoughMaterial.h  SmoothMaterial.cpp  SmoothMaterial.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  main.cpp  main.h  mat4.h  source.h  vec3.cpp  vec3.h  vec4.h
